# CyborgRobot

./: .gitignore  README.md  controller.db  diff-old-behaviour.txt  error when running code from git on robot  error.txt  feilmelding BumperState  feilmelding lydfiler  frames.gv  glassgaard1.yaml  k  navigation.db  navigation_old.db  robotPose  rviz_config.rviz
CyborgRobotInfo/: CyborgUsbRules  Diff cyborg - git.md  Prints when stopping roslaunch.txt  diff git vs cyborg primary_states code
CyborgRobotInfo/pioneerlx_setup/: setup.sh
UnusedNodes/Behaviour Trees 2018/: README.md
UnusedNodes/Behaviour Trees 2018/ros_dnn/: README.md
UnusedNodes/Behaviour Trees 2018/ros_dnn/ros_dnn_msgs/: CMakeLists.txt  package.xml
UnusedNodes/Behaviour Trees 2018/rqt_bt/: CMakeLists.txt
UnusedNodes/LED-box/: README.md  requirements.txt
UnusedNodes/LED-box/led_models/: large_cube.json
UnusedNodes/LED-box/neural_interpreter/: intensity.py  moving_average.py  random_mode.py  smiley.py
UnusedNodes/LED-box/old_examples/: README.md
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg/: CMakeLists.txt  package.xml
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_bt/: CMakeLists.txt
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_detect/: CMakeLists.txt  README  package.xml  setup.py
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_detect/cfg/: Detector.cfg
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_detect/msg/: Predictions.msg
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_detect/src/: main.py
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_msgs/: CMakeLists.txt  package.xml
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_msgs/msg/: BehaviorTreeNodes.msg
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_msgs/srv/: ClosestGoal.srv  DistanceToGoal.srv
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_nav/: CMakeLists.txt  package.xml
UnusedNodes/Morten2018 - some parts are in use/cyborg/cyborg_nav/launch/: cyborg_nav.launch
UnusedNodes/Morten2018 - some parts are in use/ros_dnn/ros_dnn/: CMakeLists.txt  package.xml
UnusedNodes/Morten2018 - some parts are in use/ros_dnn/ros_dnn/cfg/: ObjectDetector.cfg
UnusedNodes/Morten2018 - some parts are in use/ros_dnn/ros_dnn/config/: classes.yaml
UnusedNodes/Morten2018 - some parts are in use/ros_dnn/ros_dnn/include/ros_dnn/: object_detector_nodelet.hpp
UnusedNodes/Morten2018 - some parts are in use/ros_dnn/ros_dnn/src/: object_detector_nodelet.cpp
UnusedNodes/Morten2018 - some parts are in use/rqt_bt/: package.xml  plugin.xml  setup.py
UnusedNodes/Morten2018 - some parts are in use/rqt_bt/resource/: rqt_bt.ui
UnusedNodes/Morten2018 - some parts are in use/rqt_bt/scripts/: rqt_bt
UnusedNodes/Morten2018 - some parts are in use/rqt_bt/src/rqt_bt/: btdata.py  dotcode.py
UnusedNodes/cyborg_ros_command/: README.md  package.xml
UnusedNodes/mode_selector/: README.md
UnusedNodes/rosaria_client/: CMakeLists.txt
debug/: FunkyFeilmeldinger.md  Prints when stopping roslaunch.txt
devel/: .catkin  .rosinstall
devel/include/amcl/: AMCLConfig.h
resources/Diagrams/: README.md  System architecture (simple) - revised.drawio  System architecture (simple).drawio  system_proposal_2020.drawio
setup/: README.md  requirements.txt  setup.sh
setup/installs/: libarnl_1.9.2a+ubuntu16_amd64.deb
src/: README.md  cyborg_launch.launch  cyborg_state_machine.launch  git_token.txt
src/LED-box/: .gitignore  start.py
src/LED-dome/: README.md
src/behavior3editor/: README.md  package-lock.json  package.json
src/behavior3py/: CMakeLists.txt  README.md  package.xml
src/cyborg_audio/: CMakeLists.txt  README.md  package.xml
src/cyborg_behavior/: CMakeLists.txt  README.md  behavior.launch
src/cyborg_behavior_tree/: README.md
src/cyborg_commander/: CMakeLists.txt  README.md  cyborg_sytes_net.key  cyborg_sytes_net_ee.crt  package.xml
src/cyborg_controller/: .gitignore  CMakeLists.txt  README.md
src/cyborg_controller/action/: StateMachine.action
src/cyborg_controller/msg/: EmotionalFeedback.msg  EmotionalState.msg  SystemState.msg
src/cyborg_controller/src/: controller.py  databasehandler.py  emotionsystem.py  module.py  statemachinemonitor.py  statemachines.py
src/cyborg_controller/srv/: EmotionalStateService.srv
src/cyborg_eventscheduler/: CMakeLists.txt  README.md  package.xml
src/cyborg_gazebo/: CMakeLists.txt
src/cyborg_gui/: CMakeLists.txt  package.xml
src/cyborg_launch/: CMakeLists.txt  bt.launch  cyborg.launch  package.xml  start_behavior3editor.sh  startup_cyborg.sh
src/cyborg_led_dome/: CMakeLists.txt  README.md  package.xml
src/cyborg_modeselector/: CMakeLists.txt  package.xml  ros-hello-world-listener.py
src/cyborg_navigation/: README.md
src/cyborg_primary_states/: CMakeLists.txt  README.md  package.xml
src/cyborg_ros_command/: CMakeLists.txt  README.md
src/cyborg_ros_command/src/: command.py  commandform.py
src/cyborg_ros_controller/: README.md  controller.launch  package.xml
src/cyborg_ros_controller/src/: controller.py  databasehandler.py  emotionsystem.py  module.py  motivator.py  statemachinemonitor.py  statemachines.py  test3.py
src/cyborg_ros_controller/srv/: ControllerStart.srv  ControllerStop.srv
src/cyborg_ros_led_dome/: CMakeLists.txt  README.md  package.xml
src/cyborg_ros_navigation/: CMakeLists.txt  README.md  package.xml
src/cyborg_ros_navigation/action/: Navigation.action
src/cyborg_ros_navigation/src/: databasehandler.py  navigation.py  navigation_new.py  navigationserver.py  navigationserver_new.py
src/cyborg_statemachine/: CMakeLists.txt  package.xml
src/cybrorg_description/: CMakeLists.txt
src/maps/: README.md
src/nav_test/: CMakeLists.txt  package.xml
src/pioneerlx_setup/: setup.sh
src/ros-arnl/: CMakeLists.txt  package.xml  rosarnl_node.cpp
src/rosaria/: CMakeLists.txt  RosAria.cpp  navigation.launch  package.xml
src/rosaria_client/: CMakeLists.txt  package.xml
src/rqt_behavior_tree/: LICENSE  README.md  setup.py
(+531 files in other folders)
