<?xml version="1.2"?>
<package>
  <name>cyborg_controller</name>
  <version>0.0.2</version>
  <description>The NTNU Cyborg controller node.</description>
  <maintainer email="thomas91@live.no">Thomas Rostrup Andersen</maintainer>
  <license>Created by Thomas Rostrup Andersen on 12/12/2016. Copyright (C) 2016 Thomas Rostrup Andersen. All rights reserved.</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
