<package>
  <name>rqt_bt</name>
  <version>0.1.0</version>
  <description>rqt_bt provides a GUI plugin for displaying behavior trees.</description>
  <maintainer email="morten.mjelva@gmail.com">Morten Mjelva</maintainer>

  <license>BSD</license>

  <author>Morten Mjelva</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rosgraph_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend version_gte="0.2.12">rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <architecture_independent/>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
