<?xml version="1.2"?>
<package>
  <name>cyborg_nav</name>
  <version>0.1.0</version>
  <description>The NTNU Cyborg - Navigation</description>
  <maintainer email="morten.mjelva@gmail.com">Morten Mjelva</maintainer>
  <license>BSD</license>
  <url>https://www.ntnu.edu/cyborg</url>
  <author email="morten.mjelva@gmail.com">Morten Mjelva</author>

  <!-- Dependencies which this packages needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cyborg_msgs</build_depend>
  <build_depend>rosarnl</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cyborg_msgs</run_depend>
  <run_depend>rosarnl</run_depend>
</package>
